--- a/src/app/components/shared/modalinfo/modalinfo.component.scss
+++ b/src/app/components/shared/modalinfo/modalinfo.component.scss
@@ -6,3 +6,14 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
+
+.iconClose{
+  color: red;
+}
+  .imgCard {
+    max-width: 300px;
+  }
+
+  .maestro {
+    text-transform: capitalize;
+  }
